<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_view"
    android:gravity="center_horizontal"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_hospitalBuilding"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/building"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_ward"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ward_hospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_fullNamePatient"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_of_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_pressure"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/pressure_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_temperature"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temperature_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_palpitation"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/palpitation_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>


</LinearLayout>