<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="110dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/current_name"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-75dp"
        android:textSize="15sp">
    </TextView>

    <TextView
        android:id="@+id/current_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:textSize="15sp">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/refresh"
        android:layout_gravity="center"
        android:id="@+id/upload_avatar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/new_email"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/refresh_email"
        android:text="@string/refresh" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/new_name"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/refresh"
        android:id="@+id/refresh_name"/>



</LinearLayout>